fix for results_visible

--- a/client/css/buttons.less
+++ b/client/css/buttons.less
@@ -23,7 +23,7 @@ button {
   border-bottom: 3px solid rgba(0,0,0, 0.15);
   border-radius: 1px 1px 2px 2px;
   box-shadow: 0 0 4px #BBB;
-  font-family: @font;
+  font-family: @title_font;
   font-weight: bold;
   font-size: 14px;
   line-height: 0;
@@ -39,7 +39,7 @@ button {
     width: 22px;
     display: block;
     text-align: center;
-    margin: 0 48px 0 -8px;
+    margin: 0 52px 0 -8px;
 
     &.icon-only { margin: 0 -6px; }
   }
