--- a/client/css/entypo.less
+++ b/client/css/entypo.less
@@ -263,7 +263,6 @@ i.icon-social {
   font-family: 'EntypoSocialRegular';
   font-size: 40px;
   font-weight: normal;
-  line-height: 0;
 
   // &.behance:before{ content:'\F34E'; }
   // &.c-dribbble:before{ content:'\F31C'; }
