--- a/client/css/header.less
+++ b/client/css/header.less
@@ -18,8 +18,8 @@ header {
     height: 100%;
     margin-top: @header_height / 3;
     margin-left: 4px;
-    font-family: @font;
-    font-size: @header_height - 14px;
+    font-family: @title_font;
+    font-size: @header_height - 20px;
     line-height: 0px;
     color: #BBB;
 
