--- a/client/css/overlays.less
+++ b/client/css/overlays.less
@@ -28,7 +28,7 @@
       border-radius: 1px;
       box-shadow: 4px 4px 0 #CCC;
       text-align: center;
-      font-family: @font;
+      font-family: @title_font;
       font-size: 28px;
       color: #AAA;
     }
